--- a/templates/application.html
+++ b/templates/application.html
@@ -19,18 +19,19 @@
 					<div class="navbar-header">
 						<span class="navbar-brand push_menu fa fa-bars"></span>
 						<a href="/" class="navbar-brand">Honcheonui</a>
-					</div>
+					</div><%= if (member_id) { %>
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown">
 							<a id="user-profile" class="dropdown-toggle" data-toggle="dropdown"><img src="/assets/images/skull.png" class="img-responsive img-thumbnail img-circle"></a>
 							<ul class="dropdown-menu dropdown-block menu" role="menu">
 								<li><span>User Name</span></li>
+								<li><span>ID: <%= member_id %></span></li>
 								<li><a href="/profile">Profile</a></li>
 								<li><a href="/settings">Settings</a></li>
 								<li><a href="/logout">Logout</a></li>
 							</ul>
 						</li>
-					</ul>
+					</ul><% } %>
 				</div>
 			</nav>
 		</header>
@@ -45,7 +46,7 @@
 <%= partial("flash.html") %>
 <%= yield %>
 					</div>
-				</div>
+				</div><%= if (member_id) { %>
 				<div class="side-bar filly">
 				<ul>
 					<!--
@@ -68,7 +69,7 @@
 						</li>
 					</div>
 				</ul>
-				</div>
+				</div><% } %>
 			</div>
 		</div>
 	</div>
