--- a/assets/css/epoxy.scss
+++ b/assets/css/epoxy.scss
@@ -10,7 +10,7 @@
  */
 
 $header-height: 50px;
-$header-avatar-width: 4px;
+$header-avatar-size: 32px;
 $font-size: 16px;
 
 $sidebar-width: 200px;
@@ -83,11 +83,11 @@ html, body {
 		}
 		#user-profile {
 			height: $header-height;
-			padding-top: $header-avatar-width;
+			padding-top: ($header-height - $header-avatar-size) / 2;
 			padding-left: 20px;
 			img {
-				height: $header-height - 2 * $header-avatar-width;
-				width: $header-height - 2 * $header-avatar-width;
+				height: $header-avatar-size;
+				width: $header-avatar-size;
 				padding: 0;
 				border: 0;
 			}
