--- a/templates/application.html
+++ b/templates/application.html
@@ -5,6 +5,7 @@
 		<title><%= t("honcheonui") %></title>
 		<%= stylesheetTag("application.css") %>
 		<%= stylesheetTag("epoxy.css") %>
+		<%= stylesheetTag("overrides.css") %>
 		<meta name="csrf-param" content="authenticity_token" />
 		<meta name="csrf-token" content="<%= authenticity_token %>" />
 		<link rel="icon" href="<%= assetPath("images/favicon.ico") %>">
@@ -22,10 +23,12 @@
 					</div><%= if (member_id) { %>
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown">
-							<a id="user-profile" class="dropdown-toggle" data-toggle="dropdown"><img src="/assets/images/skull.png" class="img-responsive img-thumbnail img-circle"></a>
+							<a id="user-profile" class="dropdown-toggle"
+								data-toggle="dropdown"><img src="<%= member_icon %>"
+								class="img-responsive img-thumbnail img-circle"></a>
 							<ul class="dropdown-menu dropdown-block menu" role="menu">
-								<li><span>User Name</span></li>
-								<li><span>ID: <%= member_id %></span></li>
+								<li><span><%= member_name %></span></li>
+								<li><span>ID: <%= truncate(member_id,{"size":11}) %></span></li>
 								<li><a href="/profile"><%= t("profile") %></a></li>
 								<li><a href="/settings"><%= t("settings") %></a></li>
 								<li><a href="/logout"><%= t("logout") %></a></li>
