--- a/assets/css/overrides.scss
+++ b/assets/css/overrides.scss
@@ -23,6 +23,7 @@ form.horizontal {
 			display: inline-block;
 			margin-left: 2%;
 			width: 75%;
+			padding: 0 10px;
 		}
 		div.widget-group {
 			display: inline-block;
