register provider with provider plugin

--- a/templates/profile/settings.html
+++ b/templates/profile/settings.html
@@ -67,7 +67,7 @@ $(document).ready(function() {
 			},
 			error: function(data, status) {
 				$("#modal-error").removeClass("hide");
-				$("#modal-error").text("asdf");
+				$("#modal-error").text(data.responseText);
 			}
 		});
 	});
