--- a/templates/application.html
+++ b/templates/application.html
@@ -45,7 +45,7 @@
 	<!-- ---- layout: side-bar and content -->
 	<div class="container-fluid filly">
 		<div class="row filly">
-			<div id="body-wrapper" class="filly">
+			<div id="body-wrapper" class="filly active">
 				<div class="content filly">
 					<div class="col-md-12">
 <%= partial("flash.html") %>
