--- a/templates/resources/show.html
+++ b/templates/resources/show.html
@@ -23,6 +23,12 @@
 
 <div class="row">
 	<div class="col-sm-6">
+		<h3>Ownerships</h3>
+	</div>
+	<div class="col-sm-6">
+		<h3>Linked Services</h3>
+	</div>
+	<div class="col-sm-6">
 		<h3>Properties</h3>
 		<table class="table table-striped">
 			<tbody>
