--- a/templates/resources/_table_row.html
+++ b/templates/resources/_table_row.html
@@ -2,9 +2,10 @@
 			<td title="<%= resource.Provider
 				%>/<%= resource.GroupID
 				%>/<%= resource.OriginalID %>">
-				<%= iconize("status-"+resource.IsOn+"-"+resource.IsConn) %>
-				<%= iconize(resource.Type) %>
-				<%= resource.Name %></td>
+				<a href="<%= resourcePath({ resource_id: resource.ID })
+					%>"><%= iconize("status-"+resource.IsOn+"-"+resource.IsConn)
+					%> <%= iconize(resource.Type)
+					%> <%= resource.Name %></a></td>
 			<td title="<%= resource.Location %>"><%= resource.IPAddress %></td>
 			<td class="time" form="YYYY-MM-DD"><%= resource.CreatedAt %></td>
 			<td class="time" form="YYYY-MM-DD"><%= resource.UpdatedAt %></td>
@@ -12,11 +13,9 @@
 				class="time" form="YYYY-MM-DD"><%= resource.ResourceModifiedAt %></td>
 			<td>
 				<div class="pull-right btn-group">
-					<a href="<%= resourcePath({ resource_id: resource.ID }) %>"
-						class="btn btn-xs btn-info">View</a>
-					<a href="<%= resourcePath({ resource_id: resource.ID }) %>"
-						data-method="DELETE" data-confirm="Are you sure?"
-						class="btn btn-xs btn-danger">Destroy</a>
+					<a href="<%= resourcePath({ resource_id: resource.ID })
+						%>" data-method="DELETE" data-confirm="<%= t("Are you sure")
+						%>" class="btn btn-xs btn-danger"><%= t("Delete") %></a>
 				</div>
 			</td>
 		</tr>
