--- a/assets/css/epoxy.scss
+++ b/assets/css/epoxy.scss
@@ -9,6 +9,12 @@
  * https://bootsnipp.com/snippets/3xjDn
  */
 
+$font-base: 'Open Sans','Noto Sans KR','Helvetica Neue',sans-serif;
+$font-head: 'Open Sans','NanumSquare','Helvetica Neue',sans-serif;
+$font-type: Monaco, "Ubuntu Mono", "Courier New", monospace !important;
+$font-head-weight: 500;
+$font-thin-weight: 200;
+
 $color-text: #303030;
 $color-matt: #f9f9f9;
 
@@ -29,15 +35,25 @@ $sidebar-background: $color-main;
 $sidebar-highlight: #d9853b;
 $sidebar-highlight: $color-highlight;
 
-@import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow|PT+Serif');
+@import url('//cdn.jsdelivr.net/nanumsquare/1.0/nanumsquare.css');
+@import url('//fonts.googleapis.com/earlyaccess/notosanskr.css');
+@import url('//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800');
 
 
 // ---- layout: base, side-bar, and title-bar
 html, body {
 	height: 100%;
-	font-family: "PT Sans", MalgunGothic, NanumGothic;
+	font-family: $font-base;
 	font-size: $font-size;
 	background-color: $color-matt;
+}
+a {
+	color: $color-text;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: $font-head;
+	font-weight: $font-head-weight;
+	word-break: keep-all;
 }
 
 .filly {
@@ -89,6 +105,9 @@ html, body {
 			cursor: pointer;
 			color: #ddd;
 			text-transform: uppercase;
+		}
+		a.navbar-brand {
+			font-family: $font-head;
 		}
 		#user-profile {
 			height: $header-height;
@@ -143,6 +162,9 @@ a.x-tag,
 	border-radius: 5px;
 	background-color: rgba(255,255,255, 0.5);
 	color: $color-text;
+}
+.x-list-header {
+	padding-right: 10px;
 }
 
 // ---- style: sidebar
