--- a/templates/members/show.html
+++ b/templates/members/show.html
@@ -1,13 +1,13 @@
 <div class="page-header">
-	<h1>Member</h1>
+	<h1><%= t("Member") %></h1>
 </div>
 
 <div class="page-content">
-	<p><strong>ID</strong>: <%= member.ID %></p>
-	<p><strong>Email</strong>: <%= member.Email %></p>
+	<p><strong><%= t("ID") %></strong>: <%= member.ID %></p>
+	<p><strong><%= t("Email") %></strong>: <%= member.Email %></p>
 </div>
 
 <div class="page-tail pull-right">
-	<a href="<%= editMemberPath({ member_id: member.ID })%>"
-		class="btn btn-default">Edit</a>
+	<a href="<%= editMemberPath({ member_id: member.ID })
+		%>" class="btn btn-default"><%= t("edit") %></a>
 </div>
