--- a/templates/profile/settings.html
+++ b/templates/profile/settings.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-	<h1>Settings</h1>
+	<h1><%= t("Settings") %></h1>
 </div>
 
 <div class="page-content row">
@@ -7,17 +7,17 @@
 		<%= partial("profile/profile.html") %>
 		<div class="pull-right">
 			<a href="<%= uart_url %>/membership/me"
-				class="btn btn-xs btn-default">See UART Profile</a>
+				class="btn btn-xs btn-default"><%= t("See.UART.Profile") %></a>
 		</div>
 	</div>
 
 	<div class="content-block col-xs-12" id="settings-providers">
-		<h2>Providers</h2>
+		<h2><%= t("Providers") %></h2>
 		<%= partial("providers/table.html") %>
 		<div class="pull-right">
 			<a class="btn btn-xs btn-default"
 				data-toggle="modal" data-target="#newProvider"><%=
-				t("add.new.provider")%></a>
+				t("Add.New.Provider")%></a>
 		</div>
 	</div>
 </div>
@@ -34,19 +34,19 @@
 				<button type="button" class="close" data-dismiss="modal"
 					aria-label="Close"><span aria-hidden="true">&times;</span>
 				</button>
-				<h4 class="modal-title"><%=t("add.new.provider")%></h4>
+				<h4 class="modal-title"><%=t("Add.New.Provider")%></h4>
 			</div>
 			<%= form_for(provider,
 			{action: "", method: "POST", class: "horizontal"}) { %>
 			<div class="modal-body">
-				<p><%=t("modal.message.add.your.resource.provider")%></p>
+				<p><%=t("Add.your.resource.provider")%></p>
 				<p id="modal-error" class="alert alert-danger hide"></p>
 				<%= partial("providers/form.html") %>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-warning" data-dismiss="modal"
-					aria-label="Close"><%=t("close")%></button>
-				<span id="submit" class="btn btn-success"><%=t("add")%></span>
+					aria-label="Close"><%=t("Close")%></button>
+				<span id="submit" class="btn btn-success"><%=t("Add")%></span>
 			</div>
 			<% } %>
 		</div><!-- /.modal-content -->
