--- a/templates/resources/index.html
+++ b/templates/resources/index.html
@@ -1,15 +1,15 @@
 <div class="page-header">
-	<h1>Resources</h1>
+	<h1><%= t("Resources") %></h1>
 </div>
 
 <table class="table table-striped">
 	<thead>
 		<tr>
-			<th>Name</th>
-			<th>IP Address</th>
-			<th>Registered</th>
-			<th>Updated</th>
-			<th>Modified</th>
+			<th><%= t("Name") %></th>
+			<th><%= t("IP Address") %></th>
+			<th><%= t("Registered") %></th>
+			<th><%= t("Updated") %></th>
+			<th><%= t("Modified") %></th>
 			<th>&nbsp;</th>
 		</tr>
 	</thead>
