add awesome-bootstrap-checkbox and misc fix

--- a/assets/css/epoxy.scss
+++ b/assets/css/epoxy.scss
@@ -162,6 +162,7 @@ a.x-tag,
 	border-radius: 5px;
 	background-color: rgba(255,255,255, 0.5);
 	color: $color-text;
+	white-space: nowrap;
 }
 .x-list-header {
 	padding-right: 10px;
