--- a/templates/resources/show.html
+++ b/templates/resources/show.html
@@ -19,7 +19,7 @@
 </table>
 
 <h3><%= t("Notes") %></h3>
-<blockquote class="well"><%= resource.Notes %></blockquote>
+<div class="description"><%= resource.Notes %></div>
 
 <div class="row">
 	<div class="col-sm-6">
